--- a/circus/index.html
+++ b/circus/index.html
@@ -5,89 +5,101 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
+    <link rel="stylesheet" href="https://unpkg.com/buefy/dist/buefy.min.css">
+
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="page">
     <div class="bg__star bg__star--left"></div>
     <div class="bg__star bg__star--right"></div>
     <div class="bg__top"><img src="img/bg-top.svg" alt="bg-top"></div>
     <div class="ribbon">
         <div class="ribbon__text">
-        <svg viewBox="0 0 500 500">
-            <path id="curve" d="M 100 80 C 200 47, 300 47, 400 80" stroke="transparent" fill="transparent"/>
+            <svg viewBox="0 0 500 100">
+                <path id="curve" d="M 100 90 C 200 57, 300 57, 400 90" stroke="transparent" fill="transparent"/>
 
-            <text width="100%">
-                <textPath xlink:href="#curve" startOffset="15%">
-                    Jackpot
-                </textPath>
-            </text>
-        </svg>
+                <text width="100%">
+                    <textPath xlink:href="#curve" startOffset="15%">
+                        Jackpot
+                    </textPath>
+                </text>
+            </svg>
+        </div>
+        <div class="ribbon__frame">
+            <div class="ribbon__frame__text">
+                000'012
+                <small>Monaco</small>
+            </div>
         </div>
     </div>
-    <div class="content">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, inventore? Cumque aliquid incidunt eligendi voluptatum id nam mollitia est deleniti totam? Ullam, corporis voluptatem eos ipsum laudantium doloremque ab illum!
+    <div class="wrapper">
+        <div class="block__title">
+            <h1 class="h1">Тираж 04</h1>
+            <h3 class="h3">24.07.2020 12:00 UTC</h3>
+        </div>
+
+        <div class="pot__wrapper">
+            <div class="pot">
+                Airdrop Pot <br>
+                1'200 MONACO
+            </div>
+            <div class="pot">
+                Airdrop Pot <br>
+                1'200 MONACO
+            </div>
+            <div class="pot">
+                Airdrop Pot <br>
+                1'200 MONACO
+            </div>
+        </div>
+        
+        <div class="num">
+            <div class="num__row">
+                <div class="num__item glow1">1</div>
+                <div class="num__item">2</div>
+                <div class="num__item">3</div>
+                <div class="num__item">4</div>
+                <div class="num__item">5</div>
+            </div>
+            <div class="num__row">
+                <div class="num__item">6</div>
+                <div class="num__item">7</div>
+                <div class="num__item glow2">8</div>
+                <div class="num__item">9</div>
+                <div class="num__item glow4">0</div>
+            </div>
+            <div class="num__row">
+                <div class="num__item">A</div>
+                <div class="num__item">B</div>
+                <div class="num__item glow3">C</div>
+                <div class="num__item">D</div>
+                <div class="num__item">E</div>
+                <div class="num__item">F</div>
+            </div>
+        </div>
+
+        <center><h3 class="h3">До следующего розыгрыша <br>осталось <span class="date__counter__left">5</span> <span class="date__counter__left__day">дней</span></h3></center>
+        <div class="date__counter date__counter--wrapper">
+            <div class="date__counter date__counter--active" style="width: 71.43%"></div>
+        </div>
+
+        <div class="ticket">
+            <div class="ticket__text">
+                <span>купить</span>
+                <span></span>
+                <span>билет</span>
+            </div>
+            <div class="ticket__rotated-text">тираж 04</div>
+        </div>
+
     </div>
+    <div class="footer">
+        <div class="tent"><img src="img/tent.svg" alt="tent"></div>
+    </div>
+
+    <script src="https://unpkg.com/vue"></script>
+    <!-- Full bundle -->
+    <script src="https://unpkg.com/buefy/dist/buefy.min.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
