--- a/circus/variant2/index.html
+++ b/circus/variant2/index.html
@@ -11,6 +11,10 @@
     <div class="bg__star bg__star--left"></div>
     <div class="bg__star bg__star--right"></div>
     <div class="bg__top"></div>
+    <div class="star star--left"><img src="img/star-red.svg" alt="star"></div>
+    <div class="star star--right"><img src="img/star-red.svg" alt="star"></div>
+    <div class="star star--small star--left"><img src="img/star-red.svg" alt="star"></div>
+    <div class="star star--small star--right"><img src="img/star-red.svg" alt="star"></div>
     <div class="ribbon">
         <div class="ribbon__sub">
             <svg viewBox="0 0 500 100">
@@ -62,6 +66,8 @@
             </div>
         </div>
         
+        <center><h3 class="h3">Всего разыграно</h3></center>
+
         <div class="block__wrapper">
             <div class="num">
                 <div class="num__row">
